--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "embla-carousel-react": "^7.0.8",
     "express": "4.17.1",
     "helmet": "3.22.0",
+    "history": "^5.3.0",
     "knex": "^2.4.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-lineicons": "^3.0.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^6.8.1",
     "sqlite3": "^5.1.4",
     "stream": "^0.0.2",
@@ -36,7 +38,7 @@
     "build": "node ./buildScript",
     "build-front": "react-scripts build",
     "eject": "react-scripts eject",
-    "start-server": "nodemon server/server.js --watch server/*",
+    "start-server": "nodemon --require ./babel-register.js server/server.js --watch server/*",
     "start-front": "react-scripts start",
     "start": "concurrently \"npm run start-server\" \"npm run start-front\" --kill-others --kill-others-on-fail",
     "test": "react-scripts test --env=jsdom"
@@ -64,6 +66,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -72,6 +75,7 @@
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "react-scripts": "^5.0.1",
+    "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0",
@@ -81,4 +85,3 @@
     "crypto": false
   }
 }
-
