--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-lineicons": "^3.0.0",
+    "react-router": "^6.8.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.8.1",
     "sqlite3": "^5.1.4",
