--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.3",
     "body-parser": "1.19.0",
     "bootstrap": "^5.2.3",
+    "browserify-zlib": "^0.2.0",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "crypto": "^1.0.1",
@@ -24,6 +25,9 @@
     "helmet": "3.22.0",
     "history": "^5.3.0",
     "knex": "^2.4.2",
+    "mongoose": "^6.9.2",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -33,7 +37,9 @@
     "react-router-dom": "^6.8.1",
     "sqlite3": "^5.1.4",
     "stream": "^0.0.2",
-    "web-vitals": "^2.1.4"
+    "stream-http": "^3.2.0",
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "build": "node ./buildScript",
@@ -78,7 +84,6 @@
     "react-scripts": "^5.0.1",
     "source-map-loader": "^4.0.1",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
     "url": "^0.11.0",
     "webpack": "^5.74.0"
   },
